// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bitrix \`batchToListPayload\` method should convert batch with named payloads to a list payload 1`] = `
Object {
  "error": "Expected error A
Expected error B",
  "next": 4,
  "result": Array [
    Object {
      "ID": "1",
    },
    Object {
      "ID": "2",
    },
    Object {
      "ID": "3",
    },
    Object {
      "ID": "4",
    },
  ],
  "time": Object {
    "date_finish": "2019-08-30T23:28:11+03:00",
    "date_start": "2019-08-30T23:28:10+03:00",
    "duration": 0.2647218704223633,
    "finish": 1567196891.223739,
    "processing": 0.21567082405090332,
    "start": 1567196890.959017,
  },
  "total": 4,
}
`;

exports[`Bitrix \`batchToListPayload\` method should convert batch with payload of arrays to a list payload 1`] = `
Object {
  "error": "Expected error 1
Expected error 2",
  "next": 4,
  "result": Array [
    Object {
      "ID": "1",
    },
    Object {
      "ID": "2",
    },
    Object {
      "ID": "3",
    },
    Object {
      "ID": "4",
    },
  ],
  "time": Object {
    "date_finish": "2019-08-30T23:28:11+03:00",
    "date_start": "2019-08-30T23:28:10+03:00",
    "duration": 0.2647218704223633,
    "finish": 1567196891.223739,
    "processing": 0.21567082405090332,
    "start": 1567196890.959017,
  },
  "total": 4,
}
`;

exports[`Bitrix \`batchToListPayload\` method should handle undefined in \`result\` 1`] = `
Object {
  "error": "",
  "next": undefined,
  "result": Array [
    Object {
      "ID": "1",
    },
  ],
  "time": Object {
    "date_finish": "2019-08-30T23:28:11+03:00",
    "date_start": "2019-08-30T23:28:10+03:00",
    "duration": 0.2647218704223633,
    "finish": 1567196891.223739,
    "processing": 0.21567082405090332,
    "start": 1567196890.959017,
  },
  "total": 0,
}
`;

exports[`Bitrix \`fillWithCommands\` method should fill array with required amount of commands to process all entries 1`] = `
Array [
  Object {
    "method": "crm.deal.list",
    "params": Object {
      "select": Array [
        "*",
      ],
      "start": 0,
    },
  },
  Object {
    "method": "crm.deal.list",
    "params": Object {
      "select": Array [
        "*",
      ],
      "start": 2,
    },
  },
  Object {
    "method": "crm.deal.list",
    "params": Object {
      "select": Array [
        "*",
      ],
      "start": 4,
    },
  },
  Object {
    "method": "crm.deal.list",
    "params": Object {
      "select": Array [
        "*",
      ],
      "start": 6,
    },
  },
]
`;

exports[`Bitrix \`fillWithCommands\` method should override \`params.start\` 1`] = `
Array [
  Object {
    "start": 0,
  },
  Object {
    "start": 1,
  },
]
`;

exports[`Bitrix \`fillWithCommands\` method should properly take into account start 1`] = `
Array [
  Object {
    "method": "crm.deal.list",
    "params": Object {
      "select": Array [
        "*",
      ],
      "start": 2,
    },
  },
  Object {
    "method": "crm.deal.list",
    "params": Object {
      "select": Array [
        "*",
      ],
      "start": 4,
    },
  },
  Object {
    "method": "crm.deal.list",
    "params": Object {
      "select": Array [
        "*",
      ],
      "start": 6,
    },
  },
]
`;

exports[`Bitrix \`list\` method should default start to 0 1`] = `
Array [
  "crm.deal.list",
  Object {
    "start": 0,
  },
]
`;

exports[`Bitrix \`list\` method should default start to 0 2`] = `
Array [
  Array [
    Object {
      "method": "crm.deal.list",
      "params": Object {
        "start": 0,
      },
    },
  ],
]
`;

exports[`Bitrix \`list\` method should make multiple requests when entries can not be fetched in one go 1`] = `
Array [
  Array [
    "crm.deal.list",
    Object {
      "start": 0,
    },
  ],
]
`;

exports[`Bitrix \`list\` method should make multiple requests when entries can not be fetched in one go 2`] = `
Array [
  Array [
    Array [
      Object {
        "method": "crm.deal.list",
        "params": Object {
          "start": 0,
        },
      },
      Object {
        "method": "crm.deal.list",
        "params": Object {
          "start": 50,
        },
      },
      Object {
        "method": "crm.deal.list",
        "params": Object {
          "start": 100,
        },
      },
    ],
  ],
]
`;

exports[`Bitrix \`list\` method should make one request when entries can be fetched in one go 1`] = `
Array [
  Array [
    "crm.deal.list",
    Object {
      "start": 0,
    },
  ],
]
`;

exports[`Bitrix \`list\` method should properly take into account start 1`] = `
Array [
  Array [
    "crm.deal.list",
    Object {
      "start": 27,
    },
  ],
]
`;

exports[`Bitrix \`list\` method should properly take into account start 2`] = `
Array [
  Array [
    Array [
      Object {
        "method": "crm.deal.list",
        "params": Object {
          "start": 27,
        },
      },
      Object {
        "method": "crm.deal.list",
        "params": Object {
          "start": 77,
        },
      },
    ],
  ],
]
`;

exports[`Bitrix \`list\` method should return a flatten payload when entities can not be fetched in a single request 1`] = `
Object {
  "error": "Expected error A
Expected error B",
  "next": 4,
  "result": Array [
    Object {
      "ID": "1",
    },
    Object {
      "ID": "2",
    },
    Object {
      "ID": "3",
    },
    Object {
      "ID": "4",
    },
  ],
  "time": Object {
    "start": 1567196890.959017,
  },
  "total": 4,
}
`;
